tests/NormalTests/paczka1/fuzzy1/37464888.err
Error in line 5: fryg1 A317 51,81
Error in line 9: S822 S930 68,5
Error in line 13: S822 A317 75,8
Error in line 8: fryg1 A317 113,4
Error in line 15: S822 A844 26,8
Error in line 23: 8CuLBpjb0Zb A844 56,3
Error in line 24: UGXNyJWO S930 86,0
Error in line 11: rcrB9Ep S822 1,8
